# realworld-starter-kit

./: .aspell.en.pws  .babelrc  .babelrc.json  .coveragerc  .dockerignore  .editorconfig  .ember-cli.js  .env  .env.development  .env.dist  .env.example  .env.production  .env.template  .env.test  .envrc  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .example-env  .gitattributes  .gitignore  .htaccess  .huskyrc  .isort.cfg  .lintstagedrc  .lintstagedrc.json  .npmrc  .nvmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .scalafix.conf  .scalafmt.conf  .template-lintrc.js  .tool-versions  .travis.yml  .yo-rc.json  (+122 more)
.bsp/: sbt.json
.circleci/: config.yml  exit.sh
.config/: dotnet-tools.json
.devcontainer/: devcontainer.json
.docker/: devdb.sh  testdb.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  minikube.sh  pre-push.sh
.heroku/: release.sh  run.sh
.husky/: pre-commit  task-runner.json
.mypy/: type_coverage.py
.paket/: Paket.Restore.targets
Conduit/: Conduit.sln
acceptance/: articles.acceptance.ts  feed.acceptance.ts
api/: .eslintrc  .prettierrc  article_handler.go  authHandler.go  authHandler_test.go  auth_handler.go  auth_handler_test.go  error.go  main_test.go  middleware.go  package.json  pyproject.toml  server.go  settings.py  test.env  token.go  urls.py  user_handler.go  user_handler_test.go  util.go  wsgi.py
api/api/: app.py
api/migrations/: env.py
api/migrations/versions/: 41cb5633352d_create_users_table.py
api/src/: app.module.ts
api/tests/: conftest.py  test_app.py  test_db.py
app/: Loader.scala  app.js  app.py  index.html  init.go  pyproject.toml  resolver.js  router.js
app/api/: .env  api.nimble  conduit.rb  nim.cfg  rest.el
app/api/src/: .migration.json  api.nim  config.nim
app/api/src/core/: auth.nim  database.nim  events.nim  middleware.nim  views.nim
app/api/src/users/: .migration.json  models.nim  views.nim
app/controllers/: BaseController.scala  ViewController.scala  app.go  application_controller.rb  article.go  articles_controller.rb  comment.go  favorite.go  home_controller.rb  tag.go  user.go  users_controller.rb
app/controllers/tables/: Table.scala
app/models/: UserIdentity.scala  article.go  article.rb  comment.go  favorite.go  tag.go  user.go  user.rb
app/services/: Database.scala  UserDB.scala  UserService.scala
app/services/silhouetteservices/: PasswordInfoService.scala
app/src/app/: app.py  database.py
app/src/app/migrations/: env.py
app/src/app/migrations/versions/: 552d0d784bd8_create_users_table.py
app/tests/: conftest.py  test_app.py  test_db.py
app/utils/auth/: CustomSecuredErrorHandler.scala  Env.scala
app/utils/web/: ServerErrorHandler.scala
app/views/: app.scala.html  debug.html  flash.html  footer.html  header.html
app/views/App/: Index.html
app/views/articles/: _form.html.erb  edit.html.erb  new.html.erb  show.html.erb
app/views/devise/registrations/: new.html.erb
app/views/devise/sessions/: new.html.erb
app/views/errors/: 404.html  500.html
app/views/home/: index.html.erb
app/views/layouts/: _navbar.html.erb  application.html.erb
app/views/shared/: _edit-delete-button.html.erb
app/views/users/: settings.html.erb  show.html.erb
app/views/users/confirmations/: new.html.erb
app/views/users/passwords/: edit.html.erb  new.html.erb
app/views/users/registrations/: edit.html.erb  new.html.erb
app/views/users/sessions/: new.html.erb
app/views/users/unlocks/: new.html.erb
article/: article.go
auth/: auth.go
backend/: Dockerfile  README.md  build.gradle.kts  manage.py  pytest.ini
buildScripts/: copyExamples.js  myApps.json
client/: webpack.config.js
coduitapp/: HELP.md  LICENSE  pom.xml
components/: FeedToggle.tsx  Header.tsx  index.tsx
conf/: app.conf  application.conf  routes  silhouette.conf
config/: application.rb  cable.yml  config.go  credentials.yml.enc  database.yml  environment.js  importmap.rb  routes.rb  sys.config  web.php
database/: BaseSeeder.php  db.go
db/: db.go  initial_schema.sql  schema.rb  seeds.rb
deploy/: README.md  backend_rc.yml  backend_svc.yml  minikube.sh  pre-push  pre-push.sh
docker-entrypoints/: README.md  develop.sh  run.sh  test.sh
docs/: docs.go  examples.json  (+6 more)
(+2799 files in other folders)
